XP-2713 UI-changes after deploy/install refactoring * Added "Local" field to the client-side Application model * Added "warning" icon over local app icon * Added tooltip on hover over local app icon * Removed a gap between the checkbox and the app icon in the grid * Disabled Start, Stop and Uninstall actions for local apps * Replaced "Install" with "Uninstall" in the context menu * Changed batch action events to skip local apps

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/menu/context-menu.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/menu/context-menu.less
@@ -28,6 +28,7 @@
 
     &:disabled, &.disabled {
       opacity: 0.5;
+      cursor: default;
     }
   }
 
